--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 </div>
                 <div class="card">
                     <h2 class="cardname">TEAM<br>PROFILE</h2>
-                    <div class="cardtext">
-                        <p class="team_profile_name">Lim | service manager</p>
-                        <p class="team_profile_name">Park | web pront/back end developer</p>
-                        <p class="team_profile_name">Kwon | UI/UX designer</p>
+                    <div class="cardtext littledown">
+                        <p class="team_profile_name"><span class="black bold">Lim |</span> <span class="grayton">Service manager</span></p>
+                        <p class="team_profile_name"><span class="black bold">Park | </span><span class="grayton">Web front/back end developer</span></p>
+                        <p class="team_profile_name"><span class="black bold">Kwon | </span><span class="grayton">UI/UX designer</span></p>
                     </div>
                 </div>
                 <div id="bottom_line">
-                    <div>
+                    <div class="grayton">
                         <hr><br><br>
                         <p class="history">2019.06 <span>| 팀결성</span></p>
                         <p class="history">2019.08 <span>| 웹사이트 개설</span></p>
