--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PrintScreen</title>
+        <title>파피루스</title>
     </head>
     <body>
         <div>
