--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="cardname">Talk&Craft</h2>
                     <p class="cardtext">Talk&Craft는 ‘필요충분 솔루션, 우리가 만드는 서비스’라는 모토로 결성된 3인 스타트업 팀으로, 인쇄판촉 제작 플랫폼 파피루스를 개발하여 의뢰인들에게 더 나은 경험을 제공하고 기존 영세업자들에게 새로운 시장을 제시하고자 합니다. </p>
                 </div>
-                <div class="card">
+                <div class="card lastcard">
                     <h2 class="cardname">TEAM<br>PROFILE</h2>
                     <div class="cardtext littledown">
                         <p class="team_profile_name"><span class="black bold">Lim |</span> <span class="grayton">Service manager</span></p>
@@ -51,7 +51,7 @@
                 </div>
                 <div id="bottom_line">
                     <div class="grayton">
-                        <hr><br><br>
+                        <hr><br>
                         <p class="history">2019.06 <span>| 팀결성</span></p>
                         <p class="history">2019.08 <span>| 웹사이트 개설</span></p>
                     </div>
@@ -59,6 +59,10 @@
             </div>
         </main>
         <footer>
+            <div class="bgbt">
+                <img src="image/bgbt1.png">
+                <img src="image/bgbt2.png">
+            </div>
             <button id="downbtn" onclick="scrollDown()"><img src="image/downbtn.svg"></button>
             <link href="index.css" rel="stylesheet">
             <script src="index.js"></script>
