--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main id="main1">
             <div class="outer" id="main">
                 <div class="inner">
-                    <h1 class="title">디자인부터 제작까지<br/> 한번에</h1>
+                    <h1 class="title">디자인부터 <br/>제작까지 한번에</h1>
                     <div class="link_button">
                         <a class="whitebased_button">회사소개</a>
                     </div>
