--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               
         <div>
             <div class="nav">
-                <span id="logo"><a href="index.css">logo</a></span>
+                <span id="logo"><a href="index.html">logo</a></span>
                 <!-- <span class="right_fix menu">
                     <a class="menu join">회원가입</a>
                     <a class="menu info">서비스소개</a>
